All Links Working and model created

--- a/BackEnd/templates/BackEnd/addPrisoner.html
+++ b/BackEnd/templates/BackEnd/addPrisoner.html
@@ -107,7 +107,7 @@
                 <label for="male">To be executed</label><br>
                 <input type="radio" name="pType" value="released">
                 <label for="female">To be freed</label><br>
-                <button class="Capacity_Box reg " type="button" name="button">Register!</button>
+                <button class="Capacity_Box reg " onclick="window.location.href='/register' " type="button" name="button">Register!</button>
 
             </form>
         </div>
