--- a/BackEnd/templates/BackEnd/officer.html
+++ b/BackEnd/templates/BackEnd/officer.html
@@ -31,8 +31,8 @@
     <!-- login main body (contains the form)   -->
 
     <div class="middle-body">
-        <button onclick="window.location.href='addPrisoner.html'" type="button" name="button" class="main_button_homePage b1">Register Prisoner</button>
-        <button onclick="window.location.href='viewPrisoner.html'" type="button" name="button" class="main_button_homePage b2">View Prisoner</button>
+        <button onclick="window.location.href='/register'" type="button" name="button" class="main_button_homePage b1">Register Prisoner</button>
+        <button onclick="window.location.href='/viewPrisoner'" type="button" name="button" class="main_button_homePage b2">View Prisoner</button>
     </div>
 
 
