--- a/BackEnd/templates/BackEnd/transfer.html
+++ b/BackEnd/templates/BackEnd/transfer.html
@@ -25,7 +25,7 @@
         <input class="inputs" type="text" name="" value=""><br>
         <label for="Description">Description: </label>
         <textarea class="inputs inputsPara" name="paragraph_text" cols="30" rows="5"></textarea><br><br>
-        <button class="viewButtons" type="button" name="button">Request</button><br>
+        <button class="viewButtons" onclick="window.location.href='/transfer'" type="button" name="button">Request</button><br>
     </div>
 </body>
 
