--- a/BackEnd/templates/BackEnd/viewPrisoner.html
+++ b/BackEnd/templates/BackEnd/viewPrisoner.html
@@ -19,11 +19,11 @@
     <div class="viewDetails">
 
         <h1>View Prisoner</h1>
-        <button class="viewButtons" onclick="window.location.href='personalInfo.html'" type="button" name="button">Personal information</button><br>
-        <button class="viewButtons" onclick="window.location.href='Assets.html'" type="button" name="button">Assets</button><br>
-        <button class="viewButtons" onclick="window.location.href='crimeDetails.html'" type="button" name="button">Crime details</button><br>
-        <button class="viewButtons" onclick="window.location.href='Sentence.html'" type="button" name="button">Sentence details</button><br>
-        <button class="viewButtons" onclick="" type="button" name="button">View tasks</button><br>
+        <button class="viewButtons" onclick="window.location.href='/personalInfo'" type="button" name="button">Personal information</button><br>
+        <button class="viewButtons" onclick="window.location.href='/assets'" type="button" name="button">Assets</button><br>
+        <button class="viewButtons" onclick="window.location.href='/crimeDetails'" type="button" name="button">Crime details</button><br>
+        <button class="viewButtons" onclick="window.location.href='/sentence'" type="button" name="button">Sentence details</button><br>
+        <button class="viewButtons" onclick="" onclick="window.location.href='/viewPrisoner'" type="button" name="button">View tasks</button><br>
 
     </div>
 </body>
