--- a/BackEnd/templates/BackEnd/jailor.html
+++ b/BackEnd/templates/BackEnd/jailor.html
@@ -31,8 +31,8 @@
     <!-- login main body (contains the form)   -->
 
     <div class="middle-body">
-        <button onclick="window.location.href='viewPrisoner.html'" type="button" name="button" class="main_button_homePage b1">View Prisoner</button>
-        <button onclick="window.location.href='transfer.html'" type="button" name="button" class="main_button_homePage b2">Transfer request</button>
+        <button onclick="window.location.href='/viewPrisoner'" type="button" name="button" class="main_button_homePage b1">View Prisoner</button>
+        <button onclick="window.location.href='/transfer'" type="button" name="button" class="main_button_homePage b2">Transfer request</button>
     </div>
 
 
