--- a/BackEnd/templates/BackEnd/addPrisoner.html
+++ b/BackEnd/templates/BackEnd/addPrisoner.html
@@ -15,37 +15,43 @@
 
 </head>
 
+<div class="APtop">
+
+    <img class="top-logo" src="{% static '/images/logo.png' %}" alt="Punjab police logo">
+    <h1 class="main2-h1">Register prisoner</h1>
+    <p class="Capacity_Box" id="demo"></p>
+    <script>
+        showCapacity();
+    </script>
+    <hr>
+</div>
+
 <body>
+    <form action="" method="POST">
 
-    <div class="APtop">
+        {% csrf_token %}
 
-        <img class="top-logo" src="{% static '/images/logo.png' %}" alt="Punjab police logo">
-        <h1 class="main2-h1">Register prisoner</h1>
-        <p class="Capacity_Box" id="demo"></p>
-        <script>
-            showCapacity();
-        </script>
-        <hr>
-    </div>
-    <div class="row1">
+        <div class="row1">
 
-        <div class="personer-info">
-            <form class="" action="index.html" method="post">
+            <div class="personer-info">
 
-                <h2>Personel Information:</h2>
-                <label for="firstName">First name<span class="mustAdd">*</span> </label><br>
+                <h2>Personal Information:</h2>
+                <label> CNIC<span class="mustAdd">*</span> </label><br>
+                <input class="inputs inputs2" type="text" name="NIC" value=""><br><br>
+
+                <label>First name<span class="mustAdd">*</span> </label><br>
                 <input class="inputs inputs2" type="text" name="fname" value=""><br><br>
 
-                <label for="lastName">Last name<span class="mustAdd">*</span> </label><br>
+                <label>Last name<span class="mustAdd">*</span> </label><br>
                 <input class="inputs inputs2" type="text" name="lname" value=""><br><br>
 
-                <label for="Age">Age<span class="mustAdd">*</span> </label><br>
+                <label>Age<span class="mustAdd">*</span> </label><br>
                 <input class="inputs inputs2" type="number" name="age" value=""><br><br>
 
-                <label for="Address">Address<span class="mustAdd">*</span> </label><br>
-                <textarea class="inputs inputsPara" name="paragraph_text" cols="30" rows="5"></textarea><br><br>
+                <label>Address<span class="mustAdd">*</span> </label><br>
+                <textarea class="inputs inputsPara" name="address" cols="30" rows="5"></textarea><br><br>
 
-                <label for="gender">Gender<span class="mustAdd">*</span> </label><br>
+                <label>Gender<span class="mustAdd">*</span> </label><br>
                 <input type="radio" id="male" name="gender" value="male">
                 <label for="male">Male</label><br>
                 <input type="radio" id="female" name="gender" value="female">
@@ -53,83 +59,74 @@
                 <input type="radio" id="other" name="gender" value="other">
                 <label for="other">Other</label><br><br>
 
-                <label for="EmergencyContact">Emergency Contact<span class="mustAdd">*</span> </label><br>
-                <input class="inputs inputs2" type="tel" id="phone" name="phone" placeholder="+92-3xx-xxxxxxx" pattern="[9]{1}[9]{1}[3]{1}-[0-9]{7}" required><br><br>
+                <label>Emergency Contact<span class="mustAdd">*</span> </label><br>
+                <input class="inputs inputs2" type="tel" id="phone" name="phone" placeholder="3xxxxxxxxx" required><br><br>
 
-            </form>
-        </div>
+            </div>
 
-        <div class="Assests">
-            <form class="" action="index.html" method="post">
+            <div class="Assests">
 
                 <h2>Assests:</h2>
-                <label for="Assets">Add details about prisoner's assets<span class="mustAdd">*</span></label><br>
-                <textarea class="inputs inputsPara" name="paragraph_text" cols="30" rows="5"></textarea><br><br>
+                <label>Add details about prisoner's assets<span class="mustAdd">*</span></label><br>
+                <textarea class="inputs inputsPara" name="assets" cols="30" rows="5"></textarea><br><br>
 
-            </form>
-        </div>
+            </div>
 
-        <div class="CrimeDetails">
-            <form class="" action="index.html" method="post">
+            <div class="CrimeDetails">
 
                 <h2>Crime Details:</h2>
-                <label for="crimeDetails">Add details about crime<span class="mustAdd">*</span></label><br>
-                <textarea class="inputs inputsPara" name="paragraph_text" cols="30" rows="5"></textarea><br><br>
+                <label>Add details about crime<span class="mustAdd">*</span></label><br>
+                <textarea class="inputs inputsPara" name="crime" cols="30" rows="5"></textarea><br><br>
 
-            </form>
-        </div>
+            </div>
 
-        <div class="CriminalCateory">
+            <div class="CriminalCateory">
 
-            <h2>Criminal Cateory:</h2>
-            <form class="" action="index.html" method="post">
+                <h2>Criminal Category:</h2>
 
-                <label for="criminalCategory">Select Cateory<span class="mustAdd">*</span></label><br>
-                <input class="inputs inputs2" list="Cateory" name="cat">
-                <datalist id="Cateory">
+                <label>Select Category<span class="mustAdd">*</span></label><br>
+                <input class="inputs inputs2" list="Category" name="category">
+                <datalist id="Category">
           <option value="A">
           <option value="B">
           <option value="C">
           <option value="D">
         </datalist>
 
-            </form>
-        </div>
+            </div>
 
-    </div>
-    <hr>
-    <div class="row2">
-        <div class="type">
-            <form class="" action="index.html" method="post">
+        </div>
+        <hr>
+        <div class="row2">
+            <div class="type">
 
                 <h2>Type of criminal</h2>
-                <input type="radio" name="pType" value="executed">
+                <input type="radio" name="type" value="executed">
                 <label for="male">To be executed</label><br>
-                <input type="radio" name="pType" value="released">
+                <input type="radio" name="type" value="released">
                 <label for="female">To be freed</label><br>
-                <button class="Capacity_Box reg " onclick="window.location.href='/register' " type="button" name="button">Register!</button>
+                <button class="Capacity_Box reg" type="submit ">Register!</button>
 
-            </form>
-        </div>
+            </div>
 
-        <div class="Execution">
-            <h2>Execution Type:</h2>
-            <form class="" action="index.html" method="post">
+            <div class="Execution ">
+                <h2>Execution Type:</h2>
 
-                <label for="exeType">Select Cateory</label><br>
-                <input class="inputs inputs2" list="executions" placeholder="--None--">
-                <datalist id="executions">
-          <option value="--None--">
-          <option value="Hanging">
-          <option value="Electrocution">
-          <option value="Firing squad">
-          <option value="Gas Chamber">
-          <option value="Lethal injection">
+                <label>Select Cateory</label><br>
+                <input class="inputs inputs2 " list="executions " name='executionType' placeholder="--None-- ">
+                <datalist id="executions ">
+          <option value="--None-- ">
+          <option value="Hanging ">
+          <option value="Electrocution ">
+          <option value="Firing squad ">
+          <option value="Gas Chamber ">
+          <option value="Lethal injection ">
         </datalist>
                 <h2>Date of execution</h2>
-                <label for="dateOfExecution">Execution date:</label>
-                <input class="inputs inputs2" type="date" name="exeDate" value="10/10/2020">
-            </form>
-        </div>
+                <label>Execution date:</label>
+                <input class="inputs inputs2 " type="date " name="date " value="10/10/2020 ">
+            </div>
+    </form>
+</body>
 
 </html>
