--- a/BackEnd/templates/BackEnd/register.html
+++ b/BackEnd/templates/BackEnd/register.html
@@ -1,26 +1,140 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
 
-    <body>
-        <form action='' method="POST">
-            {%csrf_token%} NIC:
-            <input type="text" name="NIC"><br> first_Name:
-            <input type="text" name="fname"><br> last_Name:
-            <input type="text" name="lname"><br> age:
-            <input type="text" name="age"><br> address:
-            <input type="text" name="address"><br> gender:
-            <input type="text" name="gender"><br> emergency:
-            <input type="text" name="phone"><br> assets:
-            <input type="text" name="assets"><br> crimeDetails:
-            <input type="text" name="crime"><br> category:
-            <input type="text" name="category"><br> criminalType:
-            <input type="text" name="type"><br> executionType:
-            <input type="text" name="execution"><br> date:
-            <input type="date" data-date-format="yyyy-mm-dd" placeholder='yyyy-mm-dd' name="date"><br>
-            <input type="submit"> </form>
-    </body>
+    <meta charset="utf-8">
+    <title>Add Prisoner</title>
+    <link rel="icon" href="{% static '/images/prison.ico' %}">
+
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="{% static '/css/styles.css' %}" type='text/css'>
+    <script type="text/javascript" src="{% static '/js/index.js' %}" charset="utf-8">
+    </script>
+
 </head>
+
+<body>
+
+    <div class="APtop">
+
+        <img class="top-logo" src="{% static '/images/logo.png' %}" alt="Punjab police logo">
+        <h1 class="main2-h1">Register prisoner</h1>
+        <p class="Capacity_Box" id="demo"></p>
+        <script>
+            showCapacity();
+        </script>
+        <hr>
+    </div>
+
+
+
+    <form action='' method="POST">
+        {%csrf_token%}
+        <div class="row1">
+            <div class="personer-info">
+
+                <h2>Personal Information:</h2>
+                <label> CNIC<span class="mustAdd">*</span> </label><br>
+                <input class="inputs inputs2" type="text" name="NIC" placeholder="  3611122334455" required><br><br>
+
+                <label>First name<span class="mustAdd">*</span> </label><br>
+                <input class="inputs inputs2" type="text" name="fname" placeholder="  First Name"><br><br>
+
+                <label>Last name<span class="mustAdd">*</span> </label><br>
+                <input class="inputs inputs2" type="text" name="lname" placeholder="  Last Name"><br><br>
+
+                <label>Age<span class="mustAdd">*</span> </label><br>
+                <input class="inputs inputs2" type="number" name="age" placeholder="  i.e: 99"><br><br>
+
+                <label>Address<span class="mustAdd">*</span> </label><br>
+                <textarea class="inputs inputsPara" placeholder="  852-B..." name="address" cols="30" rows="5"></textarea><br><br>
+
+                <label>Gender<span class="mustAdd">*</span> </label><br>
+                <input type="radio" id="male" name="gender" value="male">
+                <label for="male">Male</label><br>
+                <input type="radio" id="female" name="gender" value="female">
+                <label for="female">Female</label><br>
+                <input type="radio" id="other" name="gender" value="other">
+                <label for="other">Other</label><br><br>
+
+                <label>Emergency Contact<span class="mustAdd">*</span> </label><br>
+                <input class="inputs inputs2" type="tel" id="phone" name="phone" placeholder="  3xxxxxxxxx" required><br><br>
+
+            </div>
+
+
+
+
+            <div class="Assests">
+                <h2>Assests:</h2>
+                <label>Add details about prisoner's assets<span class="mustAdd">*</span></label><br>
+                <textarea class="inputs inputsPara" placeholder="  Asset's information" name="assets" cols="30" rows="5"></textarea><br><br>
+
+            </div>
+
+            <div class="CrimeDetails">
+
+                <h2>Crime Details:</h2>
+                <label>Add details about crime<span class="mustAdd">*</span></label><br>
+                <textarea class="inputs inputsPara" placeholder="  Crime datails" name="crime" cols="30" rows="5"></textarea><br><br>
+
+            </div>
+
+            <div class="CriminalCateory">
+
+                <h2>Criminal Category:</h2>
+
+                <label>Select Category<span class="mustAdd">*</span></label><br>
+                <input class="inputs inputs2" list="Category" name="category">
+                <datalist id="Category">        
+                    <option value="A">
+                    <option value="B">
+                    <option value="C">
+                    <option value="D">
+                </datalist>
+
+            </div>
+
+        </div>
+
+
+        <hr>
+        <div class="row2">
+            <div class="type">
+
+                <h2>Type of criminal</h2>
+                <input type="radio" name="type" value="executed">
+                <label for="male">To be executed</label><br>
+                <input type="radio" name="type" value="released">
+                <label for="female">To be freed</label><br>
+                <!--<button class="Capacity_Box reg" type="submit ">Register!</button>-->
+
+            </div>
+
+            <div class="Execution ">
+                <h2>Execution Type:</h2>
+
+                <label>Select Category</label><br>
+                <input class="inputs inputs2 " list="executions " name='execution' placeholder="  --None-- ">
+                <datalist id="executions ">
+                    <option value="--None-- ">
+                    <option value="Hanging ">
+                    <option value="Electrocution ">
+                    <option value="Firing squad ">
+                    <option value="Gas Chamber ">
+                    <option value="Lethal injection ">
+                </datalist>
+                <h2>Date of execution</h2>
+                <label>Execution date:</label><br>
+                <input class="inputs inputs2 " type="date" data-date-format="yyyy-mm-dd" name="date">
+            </div>
+        </div>
+        <button class="Capacity_Box reg" type="submit">Register!</button>
+    </form>
+</body>
 
 </html>
