--- a/BackEnd/templates/BackEnd/register.html
+++ b/BackEnd/templates/BackEnd/register.html
@@ -69,7 +69,7 @@
 
 
 
-            <div class="Assests">
+            <div class="Assets">
                 <h2>Assests:</h2>
                 <label>Add details about prisoner's assets<span class="mustAdd">*</span></label><br>
                 <textarea class="inputs inputsPara" placeholder="  Asset's information" name="assets" cols="30" rows="5"></textarea><br><br>
