Trying to deploy

--- a/BackEnd/templates/BackEnd/register.html
+++ b/BackEnd/templates/BackEnd/register.html
@@ -70,7 +70,7 @@
 
 
             <div class="Assets">
-                <h2>Assests:</h2>
+                <h2>Assets:</h2>
                 <label>Add details about prisoner's assets<span class="mustAdd">*</span></label><br>
                 <textarea class="inputs inputsPara" placeholder="  Asset's information" name="assets" cols="30" rows="5"></textarea><br><br>
 
@@ -111,7 +111,6 @@
                 <label for="male">To be executed</label><br>
                 <input type="radio" name="type" value="released">
                 <label for="female">To be freed</label><br>
-                <!--<button class="Capacity_Box reg" type="submit ">Register!</button>-->
 
             </div>
 
